--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <header>
-        <div id="id_buscar"></div>
+        <div id="id_divbuscar">
+            <form action="" method="post">
+                <input type="text" id="id_tbuscar">
+                <input type="button" value=">buscar" id="id_bbuscar">
+            </form>
+        </div>
     </header>
 
     <div id="id_insertar">
