--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
     <div id="id_listado_buscar"></div>
     <div id="id_listado_general">
         <table id="id_tabla">
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th></th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                
+            </tbody>
         </table>
     </div>
 </body>
