--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             </form>
         </div>
         <div id="id_listado">
-            <div>
+            <fieldset id="listado_buscar_div">
+                <legend>BÚSQUEDA</legend>
                 <table id="id_listado_buscar"></table>
-            </div>
+            </fieldset>
             <div id="id_listado_general">
                 <table id="id_tabla">
                     <thead>
